--- a/index.ipynb
+++ b/index.ipynb
@@ -86,18 +86,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks = "
+    "number_of_weeks = 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "number_of_weeks # 3"
    ]
@@ -115,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks # 5"
+    "number_of_weeks=5 # 5"
    ]
   },
   {
