--- a/index.ipynb
+++ b/index.ipynb
@@ -173,7 +173,8 @@
     }
    ],
    "source": [
-    "travelling_schedule = \"I will be travelling\"+number_of_weeks+\"starting in\"+\"travel_month\""
+    "travelling_schedule = \"I will be travelling\"+number_of_weeks+\"starting in\"+travel_month\n",
+    "travelling_schedu"
    ]
   },
   {
