automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -157,22 +157,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'I will be travellingnumber_of_weeksstarting inJanuary'"
+       "'I will be travelling5starting inJanuary'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "travelling_schedule = \"I will be travelling\" + str(\"number_of_weeks\") + \"starting in\" + travel_month\n",
+    "travelling_schedule = \"I will be travelling\" + str(number_of_weeks) + \"starting in\" + travel_month\n",
     "travelling_schedule"
    ]
   },
