--- a/index.ipynb
+++ b/index.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "3"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,22 +157,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'I will be travelling 5 weeks starting inJanuary'"
+       "'I will be travelling 3 weeks starting in January'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "travelling_schedule = \"I will be travelling \" + str(number_of_weeks) + \" weeks starting in\" + travel_month\n",
+    "travelling_schedule = \"I will be travelling \" + str(number_of_weeks) + \" weeks starting in \" + travel_month\n",
     "travelling_schedule"
    ]
   },
