--- a/index.ipynb
+++ b/index.ipynb
@@ -173,7 +173,7 @@
    ],
    "source": [
     "travelling_schedule = \"I will be travelling \" + str(number_of_weeks) + \" weeks starting in \" + travel_month\n",
-    "travelling_schedule = \"I will be travelling {str(number_of_weeks)} weeks starting in {travel_month}"
+    "travelling_schedule = \"I will be travelling {str(number_of_weeks)} weeks starting in {travel_month}\".format"
    ]
   },
   {
