automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -157,23 +157,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'I will be travelling 3 weeks starting in January'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (<ipython-input-20-d0d0f17fab19>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-d0d0f17fab19>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    travelling_schedule = \"I will be travelling {str(number_of_weeks)} weeks starting in {travel_month}\".format(variable1=variable_to_interpolate,variable2+variable_to_interpolate)\u001b[0m\n\u001b[0m                                                                                                                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
+     ]
     }
    ],
    "source": [
     "travelling_schedule = \"I will be travelling \" + str(number_of_weeks) + \" weeks starting in \" + travel_month\n",
-    "travelling_schedule = \"I will be travelling {str(number_of_weeks)} weeks starting in {travel_month}\".format(variable1=variable_to_interpolate,variable2)"
+    "travelling_schedule = \"I will be travelling {str(number_of_weeks)} weeks starting in {travel_month}\".format(variable1=variable_to_interpolate,variable2+variable_to_interpolate)"
    ]
   },
   {
